--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,95 @@
 /*init*/
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td { margin:0; padding:0; }
-body { background:#fff; color:#555; font-size:14px; font-family: Verdana, Arial, Helvetica, sans-serif; }
-td,th,caption { font-size:14px; }
-h1, h2, h3, h4, h5, h6 { font-weight:normal; font-size:100%; }
-address, caption, cite, code, dfn, em, strong, th, var { font-style:normal; font-weight:normal;}
-a { color:#555; text-decoration:none; }
-a:hover { text-decoration:underline; }
-img { border:none; }
-ol,ul,li { list-style:none; }
-input, textarea, select, button { font:14px Verdana,Helvetica,Arial,sans-serif; }
-table { border-collapse:collapse; }
-html {overflow-y: scroll;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
-.clearfix:after {content: "."; display: block; height:0; clear:both; visibility: hidden;}
-.clearfix { *zoom:1; }
-html{
-    display: block;
+html {
+  overflow-y: scroll;
 }
-body{
-    display: block;
-    background-color: #77305f;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left:0; right: 0;
-    margin: 0 auto;
-    overflow: hidden;
-    overflow-y: auto;
+
+body {
+  background: #fff;
+  color: #555;
+  font-size: 14px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  height: 100vh;
+  overflow-y: auto;
 }
+
+img {
+  border: none;
+}
+ol,
+ul,
+li {
+  list-style: none;
+}
+
 /* game */
-.game{
-    margin: 0 auto;
-    width: 6.4rem;
-    min-height: 100%;
-    background: url(../images/game-bg.png) center top no-repeat; background-size: 6.4rem 10.08rem;
-    box-sizing: border-box; overflow: hidden;
+.game {
+  margin: 0 auto;
+  /*   width: 6.4rem; */
+  min-height: 100%;
+  background: radial-gradient(at top left, #922be1 0, #2b096b 100%);
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  overflow: hidden;
 }
-.game .title img{width:6.4rem;}
-.game .wheel-box{width:5.58rem; height:5.6rem;margin: 0 auto; position: relative;}
-.game .wheel-box #wheel{width:100%; height:100%;position: absolute; border-radius: 50%; top:0; box-sizing: border-box; overflow: hidden;left:0; background: url('../images/game-wheel.png') center center no-repeat; background-size: 5.58rem 5.6rem;}
-.game .wheel-box #arrow{width:1.55rem; height:2.21rem;position: absolute; top:0; left:0; right:0; bottom:.6rem; margin: auto; z-index: 2; background: url('../images/game-arrow.png') center center no-repeat; background-size: 1.55rem 2.21rem;}
-.game .luckDrawCount{text-align: center; color: #fff; font-size: .28rem;position: relative; top:-.5rem;}
 
+audio {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.2rem;
+  transform: scale(0.7);
+}
 
-
-
-
-
+.game .wheel-box {
+  width: 5.58rem;
+  height: 5.6rem;
+  margin: 0.3rem auto;
+  position: relative;
+}
+.game .wheel-box #wheel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  top: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  left: 0;
+  background: url("../images/game3.png") center center no-repeat;
+  background-size: 5.58rem 5.6rem;
+}
+.game .wheel-box #arrow {
+  width: 1.55rem;
+  height: 2.21rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0.6rem;
+  margin: auto;
+  z-index: 2;
+  background: url("../images/arrow.png") center center no-repeat;
+  background-size: 1.55rem 2.21rem;
+}
+.game .luckDrawCount {
+  text-align: center;
+  color: white;
+  font-size: 0.28rem;
+}
+.game .resultHistory {
+  width: 5rem;
+  height: 3rem;
+  margin: auto;
+  background: rgba(
+    255,
+    255,
+    255,
+    0.3
+  ); /* r:red g:green b:blue a:alpha(半透明):0-1,1是不透明，0是全透明 */
+  color: white;
+  overflow-y: auto;
+}
